optimize code
Signed-off-by: xinyual <xinyual@amazon.com>